main & banner added

--- a/digital-products-b8-main/index.html
+++ b/digital-products-b8-main/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
+   
     <header>
+        <!--this is nav bar section-->
         <nav>
             <div class="menu-container">
                 <div class="logo">
@@ -24,8 +26,34 @@
 
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+            <!--main & banner-->
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="tittle">Better design <br>
+                        for your digital products</h1>
+                    <p class="description">
+                        We are a creative studio specializing in UI/UX design,
+                        development and strategy.
+                    </p>
+                    <button class="explr-btn">Explore More</button>
+                </div>
+
+                <div class="banner-photo">
+                <img class="banner-img" src="./images/banner.png" alt="">
+            </div>
+
+        </section>
+
+
+    </main>
+
+    <footer>
+
+
+
+    </footer>
 
 
 
